--- a/src/Components/Locations/HeroSection.css
+++ b/src/Components/Locations/HeroSection.css
@@ -69,7 +69,7 @@
       flex-direction: column;
       width: 90%;
       margin: auto;
-      
+    
       
       /* z-index: -1; */
       
@@ -98,11 +98,11 @@
       margin-right: 0;
       margin-left: 0;
       border-radius: 10px;
-
      }
      .hero-image img{
       width: 100%;
       overflow: hidden;
+      object-fit: cover;
      }
   }
 
@@ -121,6 +121,7 @@
   
    display: flex;
    align-items: center;
+  
   gap: 20px;
    overflow: hidden;
    margin-bottom: 20px;
@@ -131,7 +132,7 @@
    flex-direction: column;
    width: 90%;
    margin: auto;
-   
+
    
    /* z-index: -1; */
    
@@ -160,4 +161,5 @@
    border-radius: 10px;
    height: 240px;
   }
+ 
 }
