--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -222,7 +222,7 @@
    position: sticky;
    top: 0;
    display: flex;
-   z-index: 999;
+   /* z-index: 999; */
   }
   .sidenavbar-container{
     /* margin-top: 70px; */
