--- a/src/Components/Section/Section.css
+++ b/src/Components/Section/Section.css
@@ -45,18 +45,47 @@
     background: linear-gradient(to left, #e03b3b, #8f0404);
   }
   /*responsive*/
-  @media (min-width:320px) and (max-width:720px) {
+  @media (min-width:320px) and (max-width:520px) {
     .still-got-questions{
+    
       display: flex;
       flex-direction: column;
-      padding: 0;
-      justify-content: center;
-      align-items: center;
+      padding: 20px;
+      margin: auto;
+      justify-content: flex-start;
+      align-items:flex-start;
     }
     .still-got-questions-text p{
       font-size: 32px;
+      line-height: 1.3;
+      margin-left: 0;
+      /* text-align: left; */
     }
     .still-got-questions-button{
       margin-bottom: 12px;
+      /* padding: 10px 12px; */
+      margin-right: 0;
+    }
+  }
+  @media (min-width:521px) and (max-width:978px) {
+    .still-got-questions{
+    
+      display: flex;
+      /* flex-direction: column; */
+      padding: 30px;
+      margin: auto;
+      justify-content:space-between;
+      align-items:flex-start;
+    }
+    .still-got-questions-text p{
+      font-size: 32px;
+      line-height: 1.3;
+      margin-left: 0;
+      /* text-align: left; */
+    }
+    .still-got-questions-button{
+      margin-bottom: 12px;
+      /* padding: 10px 12px; */
+      margin-right: 0;
     }
   }
