--- a/src/Components/Solutions/Hero.css
+++ b/src/Components/Solutions/Hero.css
@@ -15,6 +15,7 @@
 
 .hero-content {
   flex: 1;
+  width: 100%;
   display: flex; 
   flex-direction: column;
   justify-content: flex-start;
@@ -77,27 +78,34 @@
 @media(min-width:320px) and (max-width:520px){
   .sol-hero{
     margin-top: 0;
-    width: 100%;
-    height: 380px;
-    position: relative;
-    margin: auto;
-    overflow: hidden;
-    display: flex;
-    justify-content: space-between;
+    width: 90%;
     
-  } 
-  .hero-content {
+    height: 70vh;
+   
+    padding: 0;
+  overflow: hidden;
+    margin: auto;
+    position: relative;
     display: flex;
+    
+    justify-content:flex-start;
+    align-items: flex-start;
+   
+  } 
+  .hero-content{
+    display: flex;
+   
     flex-direction: column;
     justify-content: flex-start;
-    width: 100%;
-    margin:auto 0;
+    align-items: flex-start;
+    max-width: 100% !important;
+    height: 250px !important;
     position: absolute;
+    gap: 10px;
+    margin:auto 0;
+    padding: 0;
     padding-right: 0;
-    top: -30px;
-    left: 6%;
-    z-index: 1;
-    text-align: center;
+   text-align: center;
     height: 100%;
   }
   .hero-content p{
@@ -107,31 +115,36 @@
    line-height: 1.4;
   }
  
-  .hero-title {
-    max-width: 100%;
-    margin-top: 30px;
+  .sol-hero .hero-title {
+    text-align:inherit;
+  
+    width: 100% !important;
+    margin-top: 10px;
     font-size: 22px !important;
     line-height:1.1;  
+    margin-bottom: 0 !important;
    
     
   }
 
   .hero-background{
-    width: 70%;
+  
+  position: absolute;
+  width:100%;
+ height: 50%;
+ object-fit: cover;
     opacity: 80%;
+     margin: auto;
+    margin-top: 200px;
+   overflow: hidden;
+
     
-    position: absolute;
-    margin-top: 50px;
   }
-  .hero-sol-button{
-    padding: 4px 8px;
-    font-size: 14px;
-    margin-top: 10px;
-  }
+  
  
 }
 
-@media(min-width:520px) and (max-width:978px){
+@media(min-width:521px) and (max-width:978px){
   .sol-hero{
     margin-top: 0;
     width: 100%;
